[tool.poetry]
name = "py-logging"
version = "0.1.0"
description = "Explore python logging"
authors = ["Lukas Vierheilig <lukas.vierheilig@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
